--- a/app/views/application/_menu.html.erb
+++ b/app/views/application/_menu.html.erb
@@ -1,58 +1,117 @@
-<p class="header">.:: MENU ::.</p>
-<ul>
-    <li><%= link_to 'Home', controller: 'go', action: 'home' %></li>
-    <li><%= link_to 'About', controller: 'go', action: 'about' %></li>
-    <li><%= link_to 'Settings', controller: 'go', action: 'settings' %></li>
-    <li><%= link_to 'Calendar', controller: 'go', action: 'calendar' %></li>
-    <li><%= link_to 'Security', controller: 'go', action: 'security' %></li>
-</ul>
-<p>----------- -----------</p>
-<ul>
-    <li>Users
-        <ul>
-            <li><%= link_to 'Show', controller: 'users', action: 'index' %></li>
-            <li><%= link_to 'Add', controller: 'users', action: 'new' %></li>
-            <li><%= link_to 'Import', controller: 'go', action: 'import' %></li>
-        </ul>
-    </li>
-    <li>Events
-        <ul>
-            <li><%= link_to 'Show', controller: 'events', action: 'index' %></li>
-            <li><%= link_to 'Add', controller: 'events', action: 'new' %></li>
-            <li><%= link_to 'Archive', controller: 'go', action: 'archive' %></li>
-        </ul>
-    </li>
-    <li>Patterns
-        <ul>
-            <li><%= link_to 'Show', controller: 'patterns', action: 'index' %></li>
-            <li><%= link_to 'Request', controller: 'go', action: 'demand' %></li>
-        </ul>
-    </li>
-    <li>Rules
-        <ul>
-            <li><%= link_to 'Show', controller: 'rules', action: 'index' %></li>
-            <li><%= link_to 'Add', controller: 'rules', action: 'new' %></li>
-        </ul>
-    </li>
-    <li>Schedules
-        <ul>
-            <li><%= link_to 'Show', controller: 'schedules', action: 'index' %></li>
-            <li><%= link_to 'Add', controller: 'schedules', action: 'new' %></li>
-        </ul>
-    </li>
-</ul>
-<p>----------- -----------</p>
-<ul>
-    <li>Organizations
-        <ul>
-            <li><%= link_to 'Show', controller: 'organizations', action: 'index' %></li>
-            <li><%= link_to 'Add', controller: 'organizations', action: 'new' %></li>
-        </ul>
-    </li>
-    <li>Locations
-        <ul>
-            <li><%= link_to 'Show', controller: 'locations', action: 'index' %></li>
-            <li><%= link_to 'Add', controller: 'locations', action: 'new' %></li>
-        </ul>
-    </li>
-</ul>
+<table id="menuTable">
+    <tr>
+        <td class="menuTitle" id="info1">
+            Users
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <div class="menuItems" id="info1_box">
+                <ul class="mItems">
+                    <li class="mItem" id="usersShow"><%= link_to 'Show', controller: 'users', action: 'index' %></li>
+                    <li class="mItem" id="usersAdd"><%= link_to 'Add', controller: 'users', action: 'new' %></li>
+                    <li class="mItem" id="usersImport"><%= link_to 'Import', controller: 'go', action: 'import' %></li>
+                </ul>
+            </div>
+        </td>
+    </tr>
+    <tr>
+        <td class="menuTitle" id="info2">
+            Events
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <div class="menuItems" id="info2_box" >
+                <ul class="mItems">
+                    <li class="mItem" id="eventsShow"><%= link_to 'Show', controller: 'events', action: 'index' %></li>
+                    <li class="mItem" id="eventsAdd"><%= link_to 'Add', controller: 'events', action: 'new' %></li>
+                    <li class="mItem" id="eventsArchive"><%= link_to 'Archive', controller: 'go', action: 'archive' %></li>
+                </ul>
+            </div>
+        </td>
+    </tr>
+    <tr>
+        <td class="menuTitle" id="info3">
+            Patterns
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <div class="menuItems" id="info3_box">
+                <ul class="mItems">
+                    <li class="mItem" id="patternsShow"><%= link_to 'Show', controller: 'patterns', action: 'index' %></li>
+                    <li class="mItem" id="patternsRequest"><%= link_to 'Request', controller: 'go', action: 'demand' %></li>
+                </ul>
+            </div>
+        </td>
+    </tr>
+    <tr>
+        <td class="menuTitle" id="info4">
+            Rules
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <div class="menuItems" id="info4_box">
+                <ul class="mItems">
+                    <li class="mItem" id="rulesShow"><%= link_to 'Show', controller: 'rules', action: 'index' %></li>
+                    <li class="mItem" id="rulesAdd"><%= link_to 'Add', controller: 'rules', action: 'new' %></li>
+                </ul>
+            </div>
+        </td>
+    </tr>
+    <tr>
+        <td class="menuTitle" id="info5">
+            Schedules
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <div class="menuItems" id="info5_box">
+                <ul class="mItems">
+                    <li class="mItem" id="schedulesShow"><%= link_to 'Show', controller: 'schedules', action: 'index' %></li>
+                    <li class="mItem" id="schedulesAdd"><%= link_to 'Add', controller: 'schedules', action: 'new' %></li>
+                </ul>
+            </div>
+        </td>
+    </tr>
+    <tr>
+        <td class="menuTitle" id="info6">
+            Organizations
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <div class="menuItems" id="info6_box">
+                <ul class="mItems">
+                    <li class="mItem" id="organizationsShow"><%= link_to 'Show', controller: 'organizations', action: 'index' %></li>
+                    <li class="mItem" id="organizationsAdd"><%= link_to 'Add', controller: 'organizations', action: 'new' %></li>
+                </ul>
+            </div>
+        </td>
+    </tr>
+    <tr>
+        <td class="menuTitle" id="info7">
+            Locations
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <div class="menuItems" id="info7_box">
+                <ul class="mItems">
+                    <li class="mItem" id="locationsShow"><%= link_to 'Show', controller: 'locations', action: 'index' %></li>
+                    <li class="mItem" id="locationsAdd"><%= link_to 'Add', controller: 'locations', action: 'new' %></li>
+                </ul>
+            </div>
+        </td>
+    </tr>
+</table>
+
+<!--<ul>-->
+<!--    <li><%= link_to 'Home', controller: 'go', action: 'home' %></li>-->
+<!--    <li><%= link_to 'About', controller: 'go', action: 'about' %></li>-->
+<!--    <li><%= link_to 'Settings', controller: 'go', action: 'settings' %></li>-->
+<!--    <li><%= link_to 'Calendar', controller: 'go', action: 'calendar' %></li>-->
+<!--    <li><%= link_to 'Security', controller: 'go', action: 'security' %></li>-->
+<!--</ul>-->
