--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,34 +1,30 @@
-<h1>Events</h1>
-
 <% if @events.blank? %>
-    <p>Empty!</p>
+    <%= render 'empty' %>
 <% else %>
-    <table border="1">
-      <tr>
-        <th>Name</th>
-        <th>Full name</th>
-        <th>Owner</th>
-        <th>Location</th>
-        <th>Start date</th>
-        <th>End date</th>
-        <th>Description</th>
-        <th>Tags</th>
-        <th>Actions</th>
+    <table  id="resultTable" cellspacing="0" cellpadding="0">
+      <tr class="resultRow">
+        <th class="tableHeader leftRadious" colspan="2">Event name</th>
+        <th class="tableHeader">Date</th>
+        <th class="tableHeader">Location</th>
+        <th class="tableHeader rightRadious">Action</th>
       </tr>
      
       <% @events.each do |event| %>
-        <tr>
-          <td><%= event.name %></td>
-          <td><%= event.fullName %></td>
-          <td><%= @organizations.find(event.owner_id).fullName %></td>
-          <td><%= @locations.find(event.location_id).fullName %></td>
-          <td><%= event.startDate %></td>
-          <td><%= event.endDate %></td>
-          <td><%= simple_format(event.description) %></td>
-          <td><%= event.tags %></td>
-          <td>
-            <%= link_to "Edit", edit_event_path(event) %><br>
-            <%= link_to "Remove", event, method: :delete, data: {confirm: "Are you sure?"} %>
+        <tr class="resultRow">
+          <td class="resultCellCenter eventStatus">
+            <% if event.tags.include? "lock" %>
+              <div class="dotMono"></div>
+            <% else %>
+              <div class="dotColor"></div>
+            <% end %>
+          </td>
+          <td class="resultCellLeft eventName"><%= event.fullName %></td>
+          <td class="resultCellLeft eventDate"><%= event.startDate %></td>
+          <td class="resultCellLeft eventLocation"><%= @locations.find(event.location_id).fullName %></td>
+          <td class="resultCellCenter resultAction">
+            <%= link_to (image_tag "magnifying13.png", :class => "quickShort"), event %>
+            <%= link_to (image_tag "edit45.png", :class => "quickShort sidePadding"), edit_event_path(event) %>
+            <%= link_to image_tag("rubbish7.png", :class => "quickShort"), event, method: :delete, data: {confirm: "Are you sure?"} %>
           </td>
         </tr>
       <% end %>
