--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -8,39 +8,51 @@
     </div>
 <% end %>
 <%= form_for @location do |f| %>
-    <p>
-        <%= f.label :name %><br>
-        <%= f.text_field :name %>
-    </p>
-    <p>
-        <%= f.label :fullName %><br>
-        <%= f.text_field :fullName %>
-    </p>
-    <p>
-        <%= f.label :address %><br>
-        <%= f.text_area :address %>
-    </p>
-    <p>
-        <%= f.label :phone %><br>
-        <%= f.text_field :phone %>
-    </p>
-    <p>
-        <%= f.label :email %><br>
-        <%= f.text_field :email %>
-    </p>
-    <p>
-        <%= f.label :description %><br>
-        <%= f.text_area :description %>
-    </p>
-    <p>
-        <%= f.label :capacity %><br>
-        <%= f.number_field :capacity, minimum: 0, step: 1 %>
-    </p>
-    <p>
-        <%= f.label :tags %><br>
-        <%= f.text_area :tags %>
-    </p>
-    <p>
-        <%= f.submit %>
-    </p>
+    <table id="formTable">
+        <tr class="formRow">
+            <td class="formCell">
+                <%= f.label "Location name" %><br>
+                <%= f.text_field :name, :class => "formTextfield" %>
+            </td>
+            <td class="formCell">
+                <%= f.label "Location full name" %><br>
+                <%= f.text_field :fullName, :class => "formTextfield" %>
+            </td>
+        </tr>
+        <tr class="formRow">
+            <td class="formCell">
+                <%= f.label "Address" %><br>
+                <%= f.text_area :address, :class => "formTextarea" %>
+            </td>
+            <td class="formCell">
+                <%= f.label "Phone" %><br>
+                <%= f.text_field :phone, :class => "formTextfield" %>
+            </td>
+        </tr>
+        <tr class="formRow">
+            <td class="formCell">
+                <%= f.label "Email" %><br>
+                <%= f.text_field :email, :class => "formTextfield" %>
+            </td>
+            <td class="formCell">
+                <%= f.label "Description" %><br>
+                <%= f.text_area :description, :class => "formTextarea" %>
+            </td>
+        </tr>
+        <tr class="formRow">
+            <td class="formCell">
+                <%= f.label "Capacity" %><br>
+                <%= f.number_field :capacity, min: 0, step: 1, :class => "formTextfield" %>
+            </td>
+            <td class="formCell">
+                <%= f.label "Tags" %><br>
+                <%= f.text_area :tags, :class => "formTextarea" %>
+            </td>
+        </tr>
+        <tr class="formRow">
+            <td class="formCell formCenter" colspan="2">
+                <%= f.submit "Save Location", :class => "formSubmit" %>
+            </td>
+        </tr>
+    </table>
 <% end %>
