--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,17 +1,25 @@
-<h1>Registered users</h1>
-
-<table>
-  <tr>
-    <th>Login</th>
-    <th>Password</th>
-  </tr>
- 
-  <% @users.each do |user| %>
-    <tr>
-      <td><%= user.login %></td>
-      <td><%= user.password %></td>
-    </tr>
-  <% end %>
-</table>
-
-<%= link_to 'Add user', new_user_path %>
+<% if @users.blank? %>
+    <%= render 'empty' %>
+<% else %>
+    <table  id="resultTable" cellspacing="0" cellpadding="0">
+      <tr class="resultRow">
+        <th class="tableHeader leftRadious">User full name</th>
+        <th class="tableHeader">Organization</th>
+        <th class="tableHeader">Email</th>
+        <th class="tableHeader rightRadious">Action</th>
+      </tr>
+     
+      <% @users.each do |user| %>
+        <tr class="resultRow">
+          <td class="resultCellLeft userFullName"><%= user.name + " " + user.surname %></td>
+          <td class="resultCellLeft userOrganization"><%= @organizations.find(user.organization_id).fullName %></td>
+          <td class="resultCellLeft userEmain"><%= user.email %></td>
+          <td class="resultCellCenter resultAction">
+            <%= link_to (image_tag "magnifying13.png", :class => "quickShort"), user %>
+            <%= link_to (image_tag "edit45.png", :class => "quickShort sidePadding"), edit_user_path(user) %>
+            <%= link_to image_tag("rubbish7.png", :class => "quickShort"), user, method: :delete, data: {confirm: "Are you sure?"} %>
+          </td>
+        </tr>
+      <% end %>
+    </table>
+<% end %>
