--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,17 +1,3 @@
-<%= form_for :user, url: users_path do |f| %>
-    <p>
-        <%= f.label :login %><br>
-        <%= f.text_field :login %>
-    </p>
-    <p>
-        <%= f.label :password %><br>
-        <%= f.password_field :password %>
-    </p>
-    <p>
-        <%= f.label :password_confirmation %><br>
-        <%= f.password_field :password_co %>
-    </p>
-    <p>
-        <%= f.submit %>
-    </p>
-<% end %>
+<h1 class="contentHeader">New User</h1>
+
+<%= render "form" %>
